# packages/cacti-copm-core/src/main/json/openapi.tpl.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Hyperledger Cacti Plugin - Common Operator Primitives",
     "description": "Contains/describes the Hyperledger Cacti Common Operator Primitives plugin.  These primitives require specific chaincode and weaver relays to be deployed on the network as described at https://hyperledger-cacti.github.io/cacti/weaver/introduction/.",
-    "version": "2.0.0-rc.2",
+    "version": "2.0.0",
     "license": {
       "name": "Apache-2.0",
       "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
@@ -27,7 +27,6 @@
             "x-protobuf-index": 1,
             "type": "string",
             "example": "bond"
-            
           },
           "asset_id": {
             "x-protobuf-index": 2,
@@ -69,12 +68,12 @@
         ],
         "properties": {
           "source": {
-            "type" : "object",
+            "type": "object",
             "$ref": "#/components/schemas/AssetAccountV1",
             "x-protobuf-index": 1
           },
           "destination": {
-            "type" : "object",
+            "type": "object",
             "$ref": "#/components/schemas/AssetAccountV1",
             "example": {
               "network": "network2.org",
@@ -83,7 +82,7 @@
             "x-protobuf-index": 2
           },
           "asset": {
-            "type" : "object",
+            "type": "object",
             "$ref": "#/components/schemas/TransferrableAssetV1",
             "example": {
               "type": "bond",
@@ -133,26 +132,31 @@
               "asset_id": "ref203"
             }
           },
-          "owner": {
+          "source": {
             "type": "object",
             "$ref": "#/components/schemas/AssetAccountV1",
             "x-protobuf-index": 2
           },
+          "dest": {
+            "type": "object",
+            "$ref": "#/components/schemas/AssetAccountV1",
+            "x-protobuf-index": 3
+          },
           "hash_info": {
             "type": "object",
             "$ref": "#/components/schemas/HashInfoV1",
-            "x-protobuf-index": 3
+            "x-protobuf-index": 4
           },
           "destination_certificate": {
-            "x-protobuf-index": 4,
-            "type": "string"
-          },
-          "source_certificate": {
             "x-protobuf-index": 5,
             "type": "string"
           },
-          "expiry_secs": {
+          "source_certificate": {
             "x-protobuf-index": 6,
+            "type": "string"
+          },
+          "expiry_secs": {
+            "x-protobuf-index": 7,
             "type": "integer",
             "format": "int64",
             "default": 3600
@@ -163,10 +167,8 @@
         "description": "Claim a previously locked asset on the same network.\n\"lock_id\" is required for fungible assets, \"asset\" is required for non-fungible assets.\nhttps://github.com/hyperledger-cacti/cacti/blob/main/weaver/rfcs/protocols/asset-exchange/generic-htlc.md",
         "required": [
           "lock_id",
-          "source",
           "destination",
           "asset",
-          "source_certificate",
           "hash_info"
         ],
         "properties": {
@@ -174,15 +176,10 @@
             "x-protobuf-index": 1,
             "type": "string"
           },
-          "source": {
-            "type": "object",
-            "$ref": "#/components/schemas/AssetAccountV1",
-            "x-protobuf-index": 2
-          },
           "destination": {
             "type": "object",
             "$ref": "#/components/schemas/AssetAccountV1",
-            "x-protobuf-index": 3,
+            "x-protobuf-index": 2,
             "example": {
               "network": "network2.org",
               "user_id": "Bob"
@@ -191,7 +188,7 @@
           "asset": {
             "type": "object",
             "$ref": "#/components/schemas/TransferrableAssetV1",
-            "x-protobuf-index": 4,
+            "x-protobuf-index": 3,
             "example": {
               "type": "bond",
               "asset_id": "ref203"
@@ -200,15 +197,7 @@
           "hash_info": {
             "type": "object",
             "$ref": "#/components/schemas/HashInfoV1",
-            "x-protobuf-index": 5
-          },
-          "source_certificate": {
-            "x-protobuf-index": 6,
-            "type": "string"
-          },
-          "dest_certificate": {
-            "x-protobuf-index": 7,
-            "type": "string"
+            "x-protobuf-index": 4
           }
         }
       },
@@ -302,11 +291,29 @@
     }
   },
   "paths": {
-    "/api/v1/plugins/@hyperledger/cacti-plugin-copm/pledge-asset": {
+    "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/no-op": {
       "post": {
         "x-hyperledger-cacti": {
           "http": {
-            "path": "/api/v1/plugins/@hyperledger/cacti-plugin-copm/pledge-asset",
+            "path": "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/no-op",
+            "verbLowerCase": "post"
+          }
+        },
+        "operationId": "noopV1",
+        "summary": "A no-op operation.  May be used as a health check.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/pledge-asset": {
+      "post": {
+        "x-hyperledger-cacti": {
+          "http": {
+            "path": "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/pledge-asset",
             "verbLowerCase": "post"
           }
         },
@@ -345,11 +352,11 @@
         }
       }
     },
-    "/api/v1/plugins/@hyperledger/cacti-plugin-copm/lock-asset": {
+    "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/lock-asset": {
       "post": {
         "x-hyperledger-cacti": {
           "http": {
-            "path": "/api/v1/plugins/@hyperledger/cacti-plugin-copm/lock-asset",
+            "path": "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/lock-asset",
             "verbLowerCase": "post"
           }
         },
@@ -388,11 +395,11 @@
         }
       }
     },
-    "/api/v1/plugins/@hyperledger/cacti-plugin-copm/claim-pledged-asset": {
+    "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/claim-pledged-asset": {
       "post": {
         "x-hyperledger-cacti": {
           "http": {
-            "path": "/api/v1/plugins/@hyperledger/cacti-plugin-copm/claim-pledged-asset",
+            "path": "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/claim-pledged-asset",
             "verbLowerCase": "post"
           }
         },
@@ -431,11 +438,11 @@
         }
       }
     },
-    "/api/v1/plugins/@hyperledger/cacti-plugin-copm/claim-locked-asset": {
+    "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/claim-locked-asset": {
       "post": {
         "x-hyperledger-cacti": {
           "http": {
-            "path": "/api/v1/plugins/@hyperledger/cacti-plugin-copm/claim-locked-asset",
+            "path": "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/claim-locked-asset",
             "verbLowerCase": "post"
           }
         },
@@ -474,11 +481,11 @@
         }
       }
     },
-    "/api/v1/plugins/@hyperledger/cacti-plugin-copm/get-verified-view": {
+    "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/get-verified-view": {
       "post": {
         "x-hyperledger-cacti": {
           "http": {
-            "path": "/api/v1/plugins/@hyperledger/cacti-plugin-copm/get-verified-view",
+            "path": "/api/v1/plugins/@hyperledger-cacti/cacti-plugin-copm/get-verified-view",
             "verbLowerCase": "post"
           }
         },
