# packages/cacti-plugin-copm-fabric/src/main/typescript/endpoints/claim-locked-asset-v1.ts
@@ -1,7 +1,6 @@
 import { Logger } from "@hyperledger/cactus-common";
 import { AssetManager } from "@hyperledger/cacti-weaver-sdk-fabric";
 import {
-  DLTransactionParams,
   Validators,
   ClaimLockedAssetV1Request,
   Interfaces as CopmIF,
@@ -13,37 +12,22 @@ export async function claimLockedAssetV1Impl(
   contextFactory: CopmIF.DLTransactionContextFactory,
   contractName: string,
 ): Promise<string> {
-  let transactionParams: DLTransactionParams;
   const params = Validators.validateClaimLockedAssetRequest(req);
   const claimInfoStr = AssetManager.createAssetClaimInfoSerialized(
     params.hashInfo,
   );
 
-  if (params.asset.isNFT()) {
-    const agreementStr = AssetManager.createAssetExchangeAgreementSerialized(
-      params.asset.assetType,
-      params.asset.idOrQuantity(),
-      params.destCertificate,
-      params.sourceCertificate,
-    );
-    transactionParams = {
-      contract: contractName,
-      method: "ClaimAsset",
-      args: [agreementStr, claimInfoStr],
-    };
-  } else {
-    // NOTE: can not currently claim NFTs with only a lock id
-    transactionParams = {
-      contract: contractName,
-      method: "ClaimFungibleAsset",
-      args: [params.lockId, claimInfoStr],
-    };
-  }
-
   const transactionContext = await contextFactory.getTransactionContext(
     params.destination,
   );
-  const claimId = await transactionContext.invoke(transactionParams);
+
+  const claimId = await transactionContext.invoke({
+    contract: contractName,
+    method: params.asset.isNFT()
+      ? "ClaimAssetUsingContractId"
+      : "ClaimFungibleAsset",
+    args: [params.lockId, claimInfoStr],
+  });
 
   log.debug("claim complete");
   return claimId;
